# MU_ACML

./: README.md  pyproject.toml
acml_assignment1/: NerualNetwork.py  kernel.py
assignmen-3/: Actor_Critic.py  Qlearning.py
assignment-1/: README.md  kernel.py  neural_network.py  requirements.txt  test.py
assignment-1/report/: main.tex  references.bib
assignment-1/src/: README.md  pyproject.toml
assignment-2/report/: main.tex
assignment-2/src/: USAGE.md  main.ipynb  requirements.txt  requirements_complete.txt
assignment-2/src/output/first_model/: saved_model.pb
assignment-2/src/output/model_1/: saved_model.pb
assignment-2/src/output/model_10/: saved_model.pb
assignment-2/src/output/model_11/: saved_model.pb
assignment-2/src/output/model_12/: saved_model.pb
assignment-2/src/output/model_13/: saved_model.pb
assignment-2/src/output/model_14/: saved_model.pb
assignment-2/src/output/model_15/: saved_model.pb
assignment-2/src/output/model_16/: saved_model.pb
assignment-2/src/output/model_17/: saved_model.pb
assignment-2/src/output/model_18/: saved_model.pb
assignment-2/src/output/model_19/: saved_model.pb
assignment-2/src/output/model_2/: saved_model.pb
assignment-2/src/output/model_20/: saved_model.pb
assignment-2/src/output/model_21/: saved_model.pb
assignment-2/src/output/model_22/: saved_model.pb
assignment-2/src/output/model_23/: saved_model.pb
assignment-2/src/output/model_24/: saved_model.pb
assignment-3/: Qlearning.py
paper-review/: formatting-instructions-latex-2020.tex  references.bib
tests/: test_acml_assignment1.py
(+93 files in other folders)
