[tool.poetry]
name = "ACML_ASSIGNMENT1"
version = "0.1.0"
description = ""
authors = ["Zkeal <zkeal@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.3"
matplotlib = "^3.3.2"
seaborn = "^0.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
